2020-10-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Use DestroyImageList() to
	destroy composite_image since it may be a list.  Fixes oss-fuzz
	25247 "Indirect-leak in MagickMalloc".
	(DrawPrimitive): Add ImageInfo properties to request only
	returning the first frame if the in-line image is a list.  Also,
	add a missing DestroyImageList() request if multiple-frames were
	returned.

	* magick/transform.c (TransformImage): Use ReplaceImageInList()
	replace transformed image in list.

	* magick/list.c (ReplaceImageInList): Remove previous and next
	references from removed image before destroying it.

	* magick/render.c (DrawClipPath): Remove break statement so that
	added clip-mask image is initialized properly and rendered-on as
	expected.  Thanks to László Böszörményi for reporting this problem
	prior to release.

2020-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (AC_PROG_CC_STDC): AC_PROG_CC_STDC is no longer
	required since AC_PROG_CC now provides its useful function.
	AC_PROG_CC_STDC is marked as obsolete after Autoconf 2.69.
	Quote all arguments to m4 macros.

2020-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Update syntax to avoid using deprecated syntax
	according to Autoconf 2.69.

2020-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (ReadWEBPImage): Use SetImageProfile() rather than
	AppendImageProfile().

2020-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetSamplingFactors): Correct
	formatting of sampling factors string.  Fixes SourceForge issue
	633 "MagickSetSamplingFactors() API mismatch - comma separated
	values instead of 1x1 ".

2020-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Improve error checking related
	to ImagePrimitive.

	* magick/resize.c (ResizeImage): If CloneImage() of resize_image