@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201011"
-#define public MagickPackageReleaseDate "snapshot-20201011"
+#define public MagickPackageVersionAddendum ".020201015"
+#define public MagickPackageReleaseDate "snapshot-20201015"
